# struct_ppi_pred

./: .gitignore  README.md  mkdocs.yaml  pairs.json  pyproject.toml
config/: mape_cfg.json
docs/src/: data.md
docs/src/DataLoader/: dataloader.md
docs/src/Inference/: inference.md
docs/src/Model/: embedder.md  model.md
docs/src/Trainer/: trainer.md
src/struct_ppi_pred/: __init__.py
src/struct_ppi_pred/cli/: task_manager.py
src/struct_ppi_pred/cli/commands/: __init__.py  embed.py  evaluator.py  inference.py  train.py
src/struct_ppi_pred/data/: README.md
src/struct_ppi_pred/data_handler/: inference_data.py
src/struct_ppi_pred/data_handler/protein_data/: __init__.py  protein_data_handler.py  utils.py
src/struct_ppi_pred/embedder/: embedder.py
src/struct_ppi_pred/evaluator/: evaluator.py
src/struct_ppi_pred/inference/: inference.py
src/struct_ppi_pred/model/: __init__.py  data_loader.py  embedder.py  ppi_model.py  utils.py
src/struct_ppi_pred/model/MAPE_PPI/: README.md  mape_enc.py
src/struct_ppi_pred/trainer/: trainer.py
src/struct_ppi_pred/utils/: logger.py
