[project]
name = "struct-ppi-pred"
version = "0.1.0"
description = "Structure-Based Deep Learning Framework for Modeling Human-Gut Bacterial Protein Interactions"
dependencies = [
    "mkdocs>=1.6.1",
    "pymdown-extensions>=10.14",
    "mkdocs-material>=9.5.49",
    "mkdocstrings>=0.27.0",
    "dgl @ https://data.dgl.ai/wheels/torch-2.4/cu124/dgl-2.4.0%2Bcu124-cp312-cp312-manylinux1_x86_64.whl",
    "scikit-learn>=1.6.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/struct_ppi_pred"]
